--- a/src/components/ImageBanner/ImageBanner.scss
+++ b/src/components/ImageBanner/ImageBanner.scss
@@ -3,6 +3,7 @@
 
 // Styles pour le conteneur principal de la bannière d'image
 .image__banner {
+  margin: 0px 50px;
   position: relative;
   overflow: hidden; // Cache le contenu débordant
   max-width: 100vw;
